Fix metadata search results not showing

--- a/src/assets/css/tools.css
+++ b/src/assets/css/tools.css
@@ -872,6 +872,16 @@ html[dir="rtl"] .tools-range-bubble {
   display: none;
 }
 
+/* Needed for metadata editor */
+#tool-search-results-div
+  > .tools-columns-right-subsection:has(> div:not(:empty)) {
+  display: block !important;
+}
+
+.container:has(> :not(.invisible)) {
+  display: block;
+}
+
 #tool-search-results-div > .tools-columns-right-subsection > div {
   margin-top: 10px;
 }
